# laya

./: .gitignore  CLAUDE.md  LICENSE  LayaArchitectureSpec.md  LayaMasterOrchestrator.md  NOTICE  README.md  SECURITY.md  docker-compose.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pages.yml  release.yml
docs/: api-contracts.md  architecture.md  database-schema.md  decision-log.md  event-schema.md  implementation-plan.md  n8n-data-persistence.md  project-structure.md  tuning-parameters.md  windows-build-implementation.md  windows-build-runbook.md
engine/: laya-engine.spec  requirements-ml.txt  requirements.txt
engine/docs/: ai-processing-rules.md  code-review-2026-07-remediation-plan.md  code-review-2026-07.md  egress-architecture.md  egress-chat-tools.md  egress-connection-broker.md  egress-implementation-checklist.md  egress-platform-matrix.md  historical-backfill-and-manual-processing.md  local-model-newline-padding.md  oauth-app-distribution.md  pipeline-lifecycle.md  rag-shortcomings.md
engine/laya/: __init__.py  _telemetry_suppression.py  (+8 more)
landing/: docs.html  index.html  llms.txt  privacy.html  robots.txt  sitemap.xml  styles.css  terms.html
marketing/: 01-product-hunt.md  02-show-hn.md  03-blog-why-i-built-laya.md  04-seo-blog-notification-overload.md  05-reddit-posts.md  06-twitter-thread.md  07-seo-blog-cross-platform-context.md  08-dev-community-posts.md  09-marketing-strategy.md
n8n/: import.sh
scripts/: build.sh  bundle-engine.sh  dev.sh  setup-dev.sh  test_claude_spawn.py  update_icons.sh
ui/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: docker.rs  lib.rs  main.rs  n8n.rs  process_util.rs  rotating_log.rs  runtime.rs  sidecar.rs
(+471 files in other folders)
